Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
       $sampletest = "lokeshkumar"
                 
       Write-Output "##vso[task.setvariable variable=SampleVariable;]$sampletest"
+      write-host($sampletest)
 
 - task: PowerShell@2
   displayName: Powershell-Value check
