--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
 
 - task: PowerShell@2
   displayName: Powershell-Value check
-  condition: and(failed(), ne(variables['sampletest'], 'lokeshkumar'))
+  condition: and(succeeded(), ne(variables['sampletest'], 'lokeshkumar'))
   inputs: 
     targetType: inline
     script: write-host("Checking")
