--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,8 @@ steps:
       Write-Output "##vso[task.setvariable variable=SampleVariable;]$sampletest"
       write-host($sampletest)
 - task: Delay@1
-  inputs: 30
+  inputs: 
+   delayForMinutes: '30'
 
 - task: PowerShell@2
   displayName: Powershell-Value check
