Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,11 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
+
+
+- task: Delay@1
+  inputs: 
+   delayForMinutes: '30'
 - task: PowerShell@2
   displayName: Powershell-Variable Creation
   inputs:
