--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,12 @@ pool:
 steps:
 
 
-- task: Delay@1
+- task: PowerShell@2
+  displayName: Delaying current task
   inputs: 
-   delayForMinutes: '30'
+   targetType: inline
+   script: write-host("waiting")
+           start-sleep(10)
 - task: PowerShell@2
   displayName: Powershell-Variable Creation
   inputs:
