--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,13 @@ pool:
 steps:
 
 
-- task: Delay@1
+- task: PowerShell@2
   displayName: Delaying current task
   inputs: 
-   delayForMinutes: 30
+    targetType: inline
+    script: write-host("waiting started")
+            start-sleep -seconds 20
+
    
 - task: PowerShell@2
   displayName: Powershell-Variable Creation
