--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
   displayName: Delaying current task
   inputs: 
     targetType: inline
-    script: write-host("waiting started")
-            start-sleep -seconds 20
+    script: start-sleep -s 20
+            write-host("waiting started")
 
    
 - task: PowerShell@2
