--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,9 @@ steps:
 - task: PowerShell@2
   displayName: Powershell-Variable Creation
   inputs:
-    targetType: 'inline'
-    script: 
-      ipconfig | set-content -path ".\ipconfig.txt"
-      get-content(".\ipconfig.txt")
+    targetType: filePath
+    filePath: ".\script.ps1"
+    
       
 
 - task: PowerShell@2
