Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
   displayName: Powershell-Variable Creation
   inputs:
     targetType: filePath
-    filePath: ".\script.ps1"
+    filePath: master/script.ps1
     
       
 
