--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 resources:
+  repositories:
   - repository: lokeshkumar
     type: github
     endpoint: github.com_lokesh2698
